# Auth_sprint_1

./: README.md
auth_service/: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
auth_service/src/: main.py
auth_service/src/api/v1/: auth_history.py  healthcheck.py  login.py  role.py  user.py
auth_service/src/commands/: main_cli.py
auth_service/src/constants/: permissions.py
auth_service/src/core/: config.py  logger.py
auth_service/src/db/: cache.py  postgres.py
auth_service/src/db/models/: __init__.py  authentication_history.py  role.py  user.py
auth_service/src/helpers/: key_pair_generation.py
auth_service/src/models/entity/: __init__.py  user.py
auth_service/src/repositories/: auth_history.py  base.py  role.py  user.py
auth_service/src/schemas/: role.py  user.py
auth_service/src/services/: auth_history.py  roles.py  user.py
auth_service/src/tests/: .env_example  conftest.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  settings.py
auth_service/src/tests/utils/: wait_for_es.py  wait_for_postgres.py  wait_for_service.py
auth_service/src/utils/: jwt.py  mixins.py  pagination.py
tests/: .env_example  Dockerfile  commands.sh  conftest.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  settings.py
tests/functional/: test_auth.py  test_auth_history.py  test_login.py  test_logout.py  test_roles.py
tests/test_data/: auth_history.py  user.py
tests/utils/: wait_for_postgres.py  wait_for_redis.py  wait_for_service.py
