[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Amazing python team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
werkzeug = "^3.0.3"
uvicorn = "^0.30.0"
orjson = "^3.10.3"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
